--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 <body>
     <header>
         <div>
-            <img src="/resources/images/ic-logo.svg" alt="logo">
+            <img src="resources/images/ic-logo.svg" alt="logo">
             <p><span>COLMAR</span> ACADEMY</p>
         </div>
 
         <nav>
-            <a href=""><img src="/resources/images/ic-on-campus.svg" alt="on campus"><span>On
+            <a href=""><img src="resources/images/ic-on-campus.svg" alt="on campus"><span>On
                     campus</span></a>
-            <a href=""><img src="/resources/images/ic-online.svg" alt="online"><span>Online</span></a>
-            <a href=""><img src="/resources/images/ic-login.svg" alt="Sign In"><span>Sign In</span></a>
+            <a href=""><img src="resources/images/ic-online.svg" alt="online"><span>Online</span></a>
+            <a href=""><img src="resources/images/ic-login.svg" alt="Sign In"><span>Sign In</span></a>
         </nav>
     </header>
     <main>
         <section class="section1">
-            <img src="/resources/images/banner.jpg" alt="banner">
+            <img src="resources/images/banner.jpg" alt="banner">
             <div>
                 <h2>Learn something new everyday</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -34,14 +34,14 @@
 
         <section class="section2">
             <section class="main">
-                <img src="/resources/images/information-main.jpg" alt="main">
+                <img src="resources/images/information-main.jpg" alt="main">
                 <h2>doesn't hurt to keep practicing</h2>
                 <p>"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem velit, voluptatum autem non fugit modi et consectetur pariatur excepturi odit! Soluta esse modi et incidunt voluptatibus? Eligendi quae est in, quia ipsa nobis eum porro ullam mollitia natus quas repudiandae distinctio, ad harum. Ad, consequatur."</p>
                 <p><b>Emanuel, Sr Strategist at Hiring.com</b></p>
             </section>
             <section class="information">
                 <article>
-                    <img src="/resources/images/information-orientation-mobile.jpg" alt="orientation">
+                    <img src="resources/images/information-orientation-mobile.jpg" alt="orientation">
                     <div>
                         <h3>Orientation date</h3>
                         <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
@@ -49,7 +49,7 @@
                     </div>
                 </article>
                 <article>
-                    <img src="/resources/images/information-campus-mobile.jpg" alt="our campus">
+                    <img src="resources/images/information-campus-mobile.jpg" alt="our campus">
                     <div>
                         <h3>Our campus</h3>
                         <p>Find which campus is close by you</p>
@@ -57,7 +57,7 @@
                     </div>
                 </article>
                 <article>
-                    <img src="/resources/images/information-guest-lecture-mobile.jpg" alt="Special guest">
+                    <img src="resources/images/information-guest-lecture-mobile.jpg" alt="Special guest">
                     <div>
                         <h3>Special guest lecture</h3>
                         <p>Join a keynote with Oliver Sack about music in medical treatment</p>
@@ -71,7 +71,7 @@
             <h2>Start learning</h2>
             <ul>
                 <li>
-                    <img src="/resources/images/course-software.jpg" alt="software engineering">
+                    <img src="resources/images/course-software.jpg" alt="software engineering">
                     <div>
                         <h3>Software engineering</h3>
                         <p>COURSES</p>
@@ -80,7 +80,7 @@
 
                 </li>
                 <li>
-                    <img src="/resources/images/course-computer-art.jpg" alt="software engineering">
+                    <img src="resources/images/course-computer-art.jpg" alt="software engineering">
                     <div>
                         <h3>Computer art</h3>
                         <p>COURSES</p>
@@ -88,7 +88,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="/resources/images/course-design.jpg" alt="software engineering">
+                    <img src="resources/images/course-design.jpg" alt="software engineering">
                     <div>
                         <h3>Design</h3>
                         <p>COURSES</p>
@@ -96,7 +96,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="/resources/images/course-data.jpg" alt="data">
+                    <img src="resources/images/course-data.jpg" alt="data">
                     <div>
                         <h3>Data</h3>
                         <p>COURSES</p>
@@ -104,7 +104,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="/resources/images/course-business.jpg" alt="business">
+                    <img src="resources/images/course-business.jpg" alt="business">
                     <div>
                         <h3>Business</h3>
                         <p>COURSES</p>
@@ -112,7 +112,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="/resources/images/course-marketing.jpg" alt="marketing">
+                    <img src="resources/images/course-marketing.jpg" alt="marketing">
                     <div>
                         <h3>Marketing</h3>
                         <p>COURSES</p>
@@ -126,20 +126,20 @@
             <h2>Thesis exibit</h2>
             <div>
                 <section class="thesis-left">
-                    <video src="/resources/videos/thesis.mp4" type="video/mp4" controls></video>
+                    <video src="resources/videos/thesis.mp4" type="video/mp4" controls></video>
                     <h3>Reimagine urban</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum perferendis nemo explicabo vitae soluta facilis, dolor optio maxime beatae. Itaque.</p>
                 </section>
                 <section class="thesis-right">
                     <article>
-                        <img src="/resources/images/thesis-fisma.jpg" alt="fisma">
+                        <img src="resources/images/thesis-fisma.jpg" alt="fisma">
                         <div>
                             <h3>Fisma: Design and Prototype</h3>
                             <p>Designer showcase of new prototype product</p>
                         </div>
                     </article>
                     <article>
-                        <img src="/resources/images/thesis-now-and-then.jpg" alt="now & then">
+                        <img src="resources/images/thesis-now-and-then.jpg" alt="now & then">
                         <div>
                             <h3>Now and then</h3>
                             <p>Research study about New York</p>
